# Arcmath

./: .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTENT_LIBRARY_PLAN.md  DEPLOYMENT.md  DIAGNOSTIC_BLUEPRINT.md  ENV_SETUP.md  GRADING_ENGINE_V2.md  HK_VPS_DEPLOY.md  INTERACTIVE_HINT_TUTOR_MVP.md  MULTI_TENANT_ISOLATION.md  PILOT_EMAIL_TEMPLATES.md  PILOT_EMAIL_TEMPLATES.zh.md  PILOT_LAUNCH_CHECKLIST.md  PILOT_ONBOARDING.md  PILOT_ONBOARDING.zh.md  PILOT_SUPPORT_PLAYBOOK.md  PILOT_SUPPORT_PLAYBOOK.zh.md  PROOF_VERIFIER_DEPLOY.md  README.md  REAL_CONTENT_IMPORT_SPEC.md  SCHOOL_ONBOARDING.zh.md  TEACHER_UPLOAD_FORMAT.md  docker-compose.yml  env.production.example  package.json  pnpm-lock.yaml  vitest.workspace.ts
docs/: CLOUDFLARE_SETUP.md  FORMAL_VERIFICATION_ARCHITECTURE.md  NEON_SG_MIGRATION.md  PERF_UPGRADE_OPTIONS.md  PILOT_READINESS_AUDIT.md  REAL_EXAMS_GAP.md  TOB_PLATFORM_IMPLEMENTATION_PLAN.md  promo-handwritten-homework-script.md  promo-video-5min-runbook.md  (+1 more)
services/proof-verifier/: .dockerignore  Dockerfile  Dockerfile.lean  README.md  benchmark_prove.py  fly.toml  pyproject.toml  requirements.txt  try.py
services/proof-verifier/app/: autoformalize.py  classifier.py  lean_verifier.py  main.py  prove_pipeline.py  schemas.py  sympy_verifier.py
services/proof-verifier/app/lean_kernel/: __init__.py  formal_executor.py  prompt_library.py
services/proof-verifier/lean-workspace/: ArcmathVerifier.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
services/proof-verifier/tests/: test_autoformalize.py
(+361 files in other folders)
