[project]
name = "arcmath-proof-verifier"
version = "0.1.0"
description = "Arcmath proof verification microservice (SymPy + Lean stub)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "sympy>=1.13.3",
  "antlr4-python3-runtime==4.11",
  "mpmath>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
